--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -137,7 +137,7 @@
     <!--标题-->
     <div class="row">
         <div class="col-lg-12">
-            <h1>SSM-CRUD</h1>
+            <h1>Spring Boot-CRUD</h1>
         </div>
     </div>
 
